src/components/article/article.css
.w-90 {
  width: 90vw;
}

.markdown {
  @apply text-lg;

  .autolink {
    @apply text-main flex justify-center items-center;

    /* hide on md and below */
    @media (max-width: 768px) {
      display: none;
    }

    &:hover,
    &:active,
    &:focus {
      @apply mr-2;
    }
  }

  > p {
    @apply mb-2;
  }

  > ul {
    @apply mb-3;
  }

  li {
    margin: 0.1rem 0;
  }

  h2 {
    @apply text-4xl font-medium flex items-center mt-6 mb-1 leading-tight;
  }

  h3 {
    @apply text-2xl font-medium flex items-center mt-5 mb-1 leading-tight;
  }

  ul {
    @apply list-disc pl-8;
  }

  ol {
    @apply list-decimal pl-8;
  }

  blockquote {
    @apply bg-dark-700 px-4 py-3 rounded shadow my-5;
  }

  .gatsby-resp-image-wrapper * {
    @apply rounded shadow;
  }

  /*      inline code      */
  :not(pre) > code[class*='language-'] {
    padding: 0rem 0.4rem 0.2rem 0.4rem;
    color: rgba(239, 83, 80, 1);
    @apply bg-dark-700 rounded shadow;
  }

  /*      code blocks      */
  .gatsby-highlight {
    @apply bg-dark-700 px-4 py-3 rounded shadow my-5 overflow-x-auto;

    &::-webkit-scrollbar {
      @apply bg-dark-700 rounded-b shadow;
    }

    &::-webkit-scrollbar-thumb {
      @apply bg-dark-600 rounded-full border-2 border-solid border-dark-700;
    }

    scrollbar-color: #383b40 #27292d;
    scrollbar-width: thin;
  }

  code {
    font-family: 'Dank Mono', monospace;
  }

  .terminalHeader + [data-language='bash'] {
    @apply rounded-t-none mt-0;

    > pre::before {
      content: '❯ ';
      user-select: none;
      letter-spacing: -3px;
      color: hsla(190, 80%, 50%, 1);
    }
  }

  .terminalHeader {
    padding-bottom: 0.7rem;
    @apply flex pt-3 px-4 rounded-t shadow mt-5 bg-dark-900;

    .red {
      @apply h-3 w-3 bg-red-500 rounded-full;
    }

    .yellow {
      @apply ml-2 h-3 w-3 bg-orange-300 rounded-full;
    }

    .green {
      @apply ml-2 h-3 w-3 bg-green-500 rounded-full;
    }
  }

  .terminalHeader:hover {
    .red,
    .yellow,
    .green {
      background-color: hsla(190, 80%, 50%, 1);
    }
  }
}

.rawMarkdown {
  @apply w-full bg-dark-800 font-mono;
}

